Tried to actually commit bib changes

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -559,6 +559,23 @@ pages = "1260",
 year = "1986."
 }
 
+@ARTICLE{HulseTaylor1975,
+author = "Hulse, R.A. and Taylor, J.H.",
+journal = "Astroph. J.",
+volume = "195",
+number = "L51",
+year = "1975"
+}
+
+@ARTICLE{LIGOFirst2004,
+author = "Abbott, B. and others",
+title = "Detector description and performance for the first coincidence observations between LIGO and GEO",
+journal = "Nucl. {I}nstrum. {M}eth.",
+volume = "A517",
+pages ="154-179",
+year = "2004"
+}
+
 @ARTICLE{Abbott2004,
 author = "Abbott, B. and Abbott, R. and Adhikari, R. and Ageev, A. and Allen, B. and Amin, R. and Anderson, S.B. and Anderson, W.G. and Araya, M. and Armandula, H. and et al.",
 title = "Analysis of {LIGO} data for gravitational waves from binary neutron stars",
@@ -569,7 +586,7 @@ year = "2004"
 }
 
 @ARTICLE{AbbottPulsar2006,
-        author = "Abbott, B. and et al",
+        author = "Abbott, B. and others",
         title = "Coherent searches for periodic gravitational waves from unknown isolated sources and {S}corpius {X-1}: results from the second {LIGO} science run",
         journal = "Phys. Rev. D",
         volume = "76",
@@ -788,7 +805,7 @@ year="2006"
 }
 
 @ARTICLE{Deschrijver2008,
-author="Deschrijver et al, D.",
+author="Deschrijver, D. and others",
 journal="IEEE {M}icrowave {W}ire. {Comp}. Lett.",
 volume="18",
 number="6",
@@ -814,6 +831,24 @@ pages = "065005",
 year = "2012"
 }
 
+@ARTICLE{Hild2009,
+author = "Hild, S. and Grote, H. and Degallaix, J. and Chelkowski, S. and Danzmann, K. and Freise, A. and Hewitson, M. and Hough, J. and Luck, H and Prijatelj, M. and Strain, K.A. and Smith, J.R. and Willke, B.",
+title = "{DC}-readout of a signal-recycled gravitational wave detector",
+journal = "Classical and {Q}uantum {G}ravity",
+volume = "26",
+number = "5",
+pages = "055012",
+year = "2009"
+}
+
+@ARTICLE{Willke2002,
+author = "Willke, B. and others",
+journal = "Classical and {Q}uantum {G}ravity",
+volume = "19",
+pages = "1377-1387",
+year = "2002"
+}
+
 @ARTICLE{GEO600NatureSqueezing,
 author = "{The LIGO Scientific Collaboration}",
 title = "A gravitational-wave observatory operating beyond the quantum shot-noise limit",
@@ -824,19 +859,56 @@ pages = "962-965",
 year = "2011"
 }
 
-@ARTICLE{Driggers2012ActiveNoise,
-author = "Driggers, Jennifer C. and Evans, Matthew and Pepper, Keenan and Adhikari, Rana",
-title = "Active noise cancellation in a suspended interferometer",
-journal = "Review of Scientific Instruments",
-volume = "83",
-number = "024501",
-year = "2012"
+@ARTICLE{Acernese2005,
+author = "Acernese, F. and others",
+title = "Status of {V}irgo",
+journal = "Classical and {Q}uantum {G}ravity",
+volume = "22",
+number = "18",
+pages = "S869",
+year = "2005"
 }
 
-@UNPUBLISHED{BarsottiNatureSqueezing,
-author = "{The LIGO Scientific Collaboration}",
-title = "Enhancement of the astrophysical reach of a gravitational wave observatory using squeezed states of light",
-note = "In preparation."
+@ARTICLE{Grishchuk1974,
+author = "Grishchuk, L.P.",
+journal = "Sov. {J}. {E}xp. \& {T}heor. {P}hys.",
+volume = "40",
+year = "1974",
+number = "409"
+}
+
+@ARTICLE{Kuroda2010,
+author = "Kuroda, K. and others",
+journal = "Classical and {Q}uantum {G}ravity",
+volume = "27",
+year = "2010",
+number = "084004"
+}
+
+@ARTICLE{Ott2009,
+author = "Ott, C.D.",
+journal = "Classical and {Q}uantum {G}ravity",
+volume = "26",
+year = "2009",
+number = "063001"
+}
+
+@ARTICLE{Sathyaprakash2009,
+author = "Sathyaprakash, B.S. and Schutz, B.S.",
+journal = "Living {R}ev. {R}elativity",
+volume = "12",
+year = "2009",
+number = "2"
+}
+
+
+@ARTICLE{BarsottiNatureSqueezing,
+author = "Aasi, J. and others",
+title = "Enhancing the sensitivity of the {LIGO} gravitational wave detector by using squeezed states of light",
+journal = "Nature {P}hotonics",
+volume = "7",
+number = "613",
+year = "2013"
 }
 
 @UNPUBLISHED{ChuaBackscatteredLight,
@@ -845,10 +917,13 @@ title = "Impact of backscattered-light in a squeezing-enhanced interferometric g
 note = "In preparation."
 }
 
-@UNPUBLISHED{DwyerPhaseNoise,
+@ARTICLE{DwyerPhaseNoise,
 author = "Dwyer, S. and Barsotti, L. and Chua, S.S.Y. and Evans, M. and Factourovich, M. and Gustafson, D. and Isogai, T. and Kawabe, K. and Khalaidovski, A. and Lam, P.K. and Landry, M. and Mavalvala, N. and McClelland, D. and Meadors, G.D. and Mow-Lowry, C.M. and Schabel, R. and Smith-Lefebvre, N. and Stefszky, M. and Vorvick, C. and Sigg, D.",
 title ="Squeezed quadrature fluctuations in a gravitational wave detector using squeezed light",
-note = "In preparation."
+journal = "Optics {E}xpress",
+volume = "21",
+number = "16",
+year = "2013"
 }
 
 @INBOOK{Prix2006,
@@ -896,6 +971,16 @@ year = "2000",
 pages = "15-45"
 }
 
+@INCOLLECTION{Thorne300,
+author = "Thorne, K.S.",
+title = "300 {Y}ears of {G}ravitation",
+booktitle = "300 {Y}ears of {G}ravitation",
+editor = "Hawking, S.W. and Israel, W.",
+publisher = "Cambridge",
+address = "Cambridge",
+year = "1987
+"}
+
 @CONFERENCE{Bragg1922,
   author = "Bragg, W.L.",
   title = "The diffraction of X-rays by crystal",
@@ -926,6 +1011,12 @@ pages = "15-45"
    author = "J.A. Stone and J.H. Zimmerman",
    note = "National Institute of Standards and Technology, Manufacturing Engineering Laboratory, Precision Engineering. Engineering metrology toolbox. Available at http://emtoolbox.nist.gov/Wavelength/Documentation.asp."
    }
+
+@UNPUBLISHED{KlimenkoSite,
+author = "Klimenko, S.",
+title = "Line Noise Investigation",
+note = "Web: http://www.phys.ufl.edu/LIGO/LINE/",
+year = "2000"}
    
 @MISC{GSFCNeutronStar,
         author = "Goddard",
@@ -1292,6 +1383,14 @@ address = "Berkeley",
 year = "1990"
 }
 
+@BOOK{Chandrasekhar1969,
+author = "Chandrasekhar, S.",
+title = "Ellisoidal Figures of Equilibrium",
+publisher = "Yale",
+address = "New {H}aven",
+year = "1969"
+}
+
 @INBOOK{morgan,
 	author = "Morgan, F.J.",
 	title = "MacMillan encyclopedia of physics",
@@ -1599,6 +1698,13 @@ note = "U.S. Atomic Energy Commission Document",
 year = "1949."
 }
 
+@UNPUBLISHED{MendellCohere2013,
+author = "Mendell, G.",
+title = "Significance of the magnitude squared coherence",
+note = "{LIGO} presentation {G}1300070, presented at the {LIGO-VIRGO Conference}, {Bethesda, Maryland}",
+year = "2013"
+}
+
  @UNPUBLISHED{KissellPRCMICH,
  author = "J. Kissel",
  title = "MICH and PRC coupling into DARM",
@@ -1615,7 +1721,27 @@ year = "1949."
  year = "2009"
  }
 
-@UNPUBLISHED
+@UNPUBLISHED{MatappsRepository,
+  author = "{LIGO Scientific Collaboration}",
+  title = "MatApps software repository",
+  note = "Web: https://www.lsc-group.phys.uwm.edu/daswg/projects/matapps.html",
+  year = "2013"
+}
+
+@BOOK{Matlab2012a,
+author = "{The MathWorks, Inc.}",
+title = "MATLAB and Signal Processing Toolbox Release 2012a,",
+address = "Natick, Massachusetts",
+year = "2012"
+}
+
+@BOOK{Wiener1949,
+author = "Wiener, N.",
+title = "Extrapolation, interpolation, and smoothing of stationary time series: with engineering applications",
+year = "1949",
+publisher = "MIT",
+address = "Cambridge, Massachusetts"
+}
 
 @TECHREPORT{MonitorRC,
 	author = "Gustafson, D.",
@@ -1873,6 +1999,21 @@ number = "T1100562",
 year = "2011"
 }
 
+@TECHREPORT{AllenHuaOttewill1999,
+author = "Allen, Bruce and Hua, Wensheng and Ottewill, Adrian C.",
+title = "Automatic cross-talk removal from multi-channel data",
+institution = "arXiv",
+number = "gr-qc/9909083v1",
+year = "1999"}
+
+@TECHREPORT{Sigg2005,
+author = "Sigg, D.",
+title = "Implementing an {IIR} Filter in Hardware",
+institution = "LIGO",
+number = "T050060",
+year = "2005"
+}
+
 @PHDTHESIS{BallmerThesis,
 author = "Ballmer, S. W.",
 title = "LIGO interferometer operating at design sensitivity with application to gravitational radiometry",
@@ -1969,3 +2110,125 @@ school = "Massachusetts Institute of Technology",
 month = sep,
 year = "2006"
 }
+
+@ARTICLE{Driggers2012ActiveNoise,
+author = "Driggers, Jennifer C. and Evans, Matthew and Pepper, Keenan and Adhikari, Rana",
+title = "Active noise cancellation in a suspended interferometer",
+journal = "Review of Scientific Instruments",
+volume = "83",
+number = "024501",
+year = "2012"
+}
+
+@ARTICLE{Black2001,
+author = "Black, E.",
+journal = "Amer. J. Phys.",
+volume = "69",
+year = "2001",
+number = "79"
+}
+
+@ARTICLE{Lindblom1995,
+author = "Lindblom, L. and Mendell, G.",
+journal = "Astrophys. {J}",
+volume = "444",
+year = "1995",
+number = "804"
+}
+
+@ARTICLE{Riles2013,
+author = "Riles, K.",
+journal = "Prog. in {P}article \& {N}ucl. {P}hys.",
+volume = "68",
+number = "1",
+year = "2013",
+title = "Gravitational waves: sources, detectors and searches"
+}
+
+@ARTICLE{Welch1967,
+author = "Welch, P.D.",
+journal = "{IEEE} {T}rans. on {A}udio {E}lectroacoustics",
+year = "1967",
+volume = "AU-15",
+pages = "70-73"
+}
+
+@ARTICLE{LIGOCal2010,
+author = "Abadie, J. and others",
+journal = "Nucl. {I}nstrum. {M}eth.",
+volume = "A624",
+number = "223",
+year = "2010"
+}
+
+@ARTICLE{Swift2012,
+author = "Evans, P.A. and others",
+journal = "{ApJS}",
+volume = "203",
+year = "2012",
+number = "28"
+}
+
+@ARTICLE{Antares2013,
+author = "Adri\'{a}n-Mart\'{i}nez, S. and others",
+journal = "{JCAP}",
+volume = "1306",
+number = "008",
+year = "2013"
+}
+
+@ARTICLE{FinnInspiral1993,
+author = "Finn, L.S. and Chernoff, D. F.",
+journal = "Phys {R}ev {D}",
+title = "Observing binary inspiral in gravitational radiation: one interferometer",
+volume = "47",
+year = "1993",
+pages = "2198-2219"
+}
+
+@ARTICLE{MacleodIHope2012,
+author = "Macleod, D.M. and Fairhurst, S. and Hughey, B. and Lundgren, A.P. and Pekowsky, L. and Rollins, J. and Smith, J.R.",
+title = "Reducing the effect of seismic noise in LIGO searches by targeted veto generation",
+journal = "Classical and {Q}uantum {G}ravity",
+volume = "29",
+year = "2012",
+number = "055006"
+}
+
+@ARTICLE{LIGOBurst2012,
+author = "Abadie, J. and others",
+journal = "Phys. {R}ev. {D}",
+title = "All-sky search for gravitational-wave burst in the second joint LIGO-Virgo run",
+volume = "85",
+year = "2012",
+number = "122007"
+}
+
+@ARTICLE{Boashash1990,
+author = "White, L.B. and Boashash, B.",
+title = "Cross Spectral Analysis of Non-Stationary Procesess",
+journal = "{IEEE} {T}ransactions on {I}nformation {T}heory",
+year = "1990",
+volume = "36",
+number = "4",
+pages = "830-835"
+}
+
+@ARTICLE{Findchirp2012,
+author = "Allen, B. and Anderson, W.G. and Brady, P.R. and Brown, D.A. and Creighton, J.D.E.",
+title = "{FINDCHIRP}: {A}n algorithm for detection of gravitational waves from inspiraling compact binaries",
+journal = "{P}hys {R}ev {D}",
+year = "2012",
+volume = "85",
+number = "12"
+}
+
+@ARTICLE{PetersMatthews1963,
+author = "Peters, P.C. and Matthews, J.",
+title = "Gravitational Radiation from Point Masses in a {K}eplerian Orbit",
+journal = "{P}hys {R}ev",
+year = "1963",
+volume = "131",
+number = "435-440"
+}
+
