Fixed a typo and added Ethan thesis

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -2054,7 +2054,7 @@ author = "Smith-Lefebvre, Nicol\'{a}s {de Mateo}",
 title = "Techniques for improving the readout sensitivity of gravitational wave antennae",
 school = "Massachusetts Institute of Technology",
 month = jun,
-year = 2012"
+year = "2012"
 }
 
 @PHDTHESIS{FarrThesis,
@@ -2101,6 +2101,13 @@ author = "Sheon S. Y. Chua",
 title = "In preparation",
 school = "Australian National University",
 year = "In preparation"
+}
+
+@PHDTHESIS{RomeroThesis,
+author = "Romero-Severson, Ethan Obie",
+title = "Sexual volatility and the spread of HIV",
+school = "University of Michigan, Ann Arbor",
+year = "2011"
 }
 
 @MASTERSTHESIS{FotopoulosThesis,
