Added Driggers and Harms reference

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -2239,3 +2239,12 @@ volume = "131",
 number = "435-440"
 }
 
+@ARTICLE{Driggers2012NN,
+author = "Driggers, Jennifer C. and Harms, Jan and Adhikari, Rana X.",
+title = "Subtraction of Newtonian noise using optimized sensor arrays",
+journal = "{P}hys {R}ev {D}",
+volume = "86",
+number = "102001",
+year = "2012"
+}
+
