Added DeRosa citation

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -2248,3 +2248,11 @@ number = "102001",
 year = "2012"
 }
 
+@ARTICLE{DeRosa2012FF,
+author = "De{R}osa, Ryan, and Driggers, Jennifer C. and Atkinson, Dani and Miao, Haixing, and Frolov, Valera and Landry, Michael and Giaime, Joseph A. and Adhikari, Rana X.",
+title = "Global feed-forward vibration isolation in a km scale interferometer",
+journal = "{C}lass {Q}uantum {G}rav",
+volume = "29",
+number = "215008",
+year = "2012"
+}
