Incorporated revisions from latest CQG revision. Grand David Meadors, 02013-11-30, JD 2456627.

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -6,7 +6,7 @@
 @ARTICLE{feyn54,
    author = "R. P. Feynman",
    year = "1954",
-   journal = "Phys.\ Rev.",
+   journal = "Phys. Rev.",
    volume = "94",
    pages = "262"
 }
@@ -14,7 +14,7 @@
 @ARTICLE{epr,
    author = "A. Einstein and B. Podolsky and N. Rosen",
    year = "1935",
-   journal = "Phys.\ Rev.",
+   journal = "Phys. Rev.",
    volume = "47",
    pages = "777"
 }
@@ -437,7 +437,7 @@
   journal = "Ann. D. Phys.",
   volume = "4",
   year = "1901",
-  pages = "553".
+  pages = "553"
   }
 
   @ARTICLE{CODATA2002,
@@ -852,7 +852,7 @@ year = "2002"
 @ARTICLE{GEO600NatureSqueezing,
 author = "{The LIGO Scientific Collaboration}",
 title = "A gravitational-wave observatory operating beyond the quantum shot-noise limit",
-journal = "Nature {P}hysics",
+journal = "Nature {P}hys.",
 volume = "7",
 number = "12",
 pages = "962-965",
@@ -905,7 +905,7 @@ number = "2"
 @ARTICLE{BarsottiNatureSqueezing,
 author = "Aasi, J. and others",
 title = "Enhancing the sensitivity of the {LIGO} gravitational wave detector by using squeezed states of light",
-journal = "Nature {P}hotonics",
+journal = "Nature {P}hoton.",
 volume = "7",
 number = "613",
 year = "2013"
@@ -920,7 +920,7 @@ note = "In preparation."
 @ARTICLE{DwyerPhaseNoise,
 author = "Dwyer, S. and Barsotti, L. and Chua, S.S.Y. and Evans, M. and Factourovich, M. and Gustafson, D. and Isogai, T. and Kawabe, K. and Khalaidovski, A. and Lam, P.K. and Landry, M. and Mavalvala, N. and McClelland, D. and Meadors, G.D. and Mow-Lowry, C.M. and Schabel, R. and Smith-Lefebvre, N. and Stefszky, M. and Vorvick, C. and Sigg, D.",
 title ="Squeezed quadrature fluctuations in a gravitational wave detector using squeezed light",
-journal = "Optics {E}xpress",
+journal = "Opt. {E}xpress",
 volume = "21",
 number = "16",
 year = "2013"
@@ -1578,7 +1578,7 @@ year = "1969"
 @UNPUBLISHED{Qingming,
 author = "Zhang Zeduan",
 title = "Qingming Shanghe Tu",
-note = "Web: http://academic.reed.edu/chinese/qingming/scrollV2/, courtesy of Reed College and the Palace Museum, Beijing"
+note = "Web: http://academic.reed.edu/chinese/qingming/scrollV2/, courtesy of Reed College and the Palace Museum, Beijing",
 year = "c. 1120"
 }
 
@@ -1730,6 +1730,7 @@ year = "2013"
 
 @BOOK{Matlab2012a,
 author = "{The MathWorks, Inc.}",
+publisher = "{The MathWorks, Inc.}",
 title = "MATLAB and Signal Processing Toolbox Release 2012a,",
 address = "Natick, Massachusetts",
 year = "2012"
@@ -1901,7 +1902,7 @@ address = "Cambridge, Massachusetts"
   }
 
   @MISC{NISTPlanck,
-  title = "{The NIST reference on constants, units, and uncertainty: fundamental physics constants, Planck's constant \textit{h}. Web: http://physics.nist.gov/cgi-bin/cuu/Value?h}"
+  title = "{The NIST reference on constants, units, and uncertainty: fundamental physics constants, Planck's constant \textit{h}. Web: http://physics.nist.gov/cgi-bin/cuu/Value?h}",
   howpublished = "Web: http://physics.nist.gov/cgi-bin/cuu/Value?h",
   note = "Thanks to the National Institute of Standards and Technology."
   }
@@ -1931,7 +1932,7 @@ year = "2000-02-06"
 author = "Carroll, S.M.",
 title = "Lecture notes on General Relativity",
 institution = "arXiv",
-number = "gr-qc/9712019v1".
+number = "gr-qc/9712019v1",
 year = "1997-12-03"
 }
 
@@ -2012,6 +2013,14 @@ title = "Implementing an {IIR} Filter in Hardware",
 institution = "LIGO",
 number = "T050060",
 year = "2005"
+}
+
+@TECHREPORT{SiggFreq1997,
+author = "Sigg, D.",
+title = "Frequency {R}esponse of the {LIGO} {I}nterferometer",
+institution = "LIGO",
+number = "T970084",
+year = "1997"
 }
 
 @PHDTHESIS{BallmerThesis,
@@ -2103,13 +2112,6 @@ school = "Australian National University",
 year = "In preparation"
 }
 
-@PHDTHESIS{RomeroThesis,
-author = "Romero-Severson, Ethan Obie",
-title = "Sexual volatility and the spread of HIV",
-school = "University of Michigan, Ann Arbor",
-year = "2011"
-}
-
 @MASTERSTHESIS{FotopoulosThesis,
 author = "Fotopoulos, Nickolas",
 title = "Searching for stochastic gravitational waves using co-located interferometric detectors",
@@ -2121,7 +2123,7 @@ year = "2006"
 @ARTICLE{Driggers2012ActiveNoise,
 author = "Driggers, Jennifer C. and Evans, Matthew and Pepper, Keenan and Adhikari, Rana",
 title = "Active noise cancellation in a suspended interferometer",
-journal = "Review of Scientific Instruments",
+journal = "Rev. {S}ci. {I}nstrum.",
 volume = "83",
 number = "024501",
 year = "2012"
@@ -2178,7 +2180,7 @@ number = "28"
 
 @ARTICLE{Antares2013,
 author = "Adri\'{a}n-Mart\'{i}nez, S. and others",
-journal = "{JCAP}",
+journal = "{J}. {C}osmol. {A}stropart. {P}hys.",
 volume = "1306",
 number = "008",
 year = "2013"
@@ -2186,7 +2188,7 @@ year = "2013"
 
 @ARTICLE{FinnInspiral1993,
 author = "Finn, L.S. and Chernoff, D. F.",
-journal = "Phys {R}ev {D}",
+journal = "Phys. {R}ev. {D}",
 title = "Observing binary inspiral in gravitational radiation: one interferometer",
 volume = "47",
 year = "1993",
@@ -2224,7 +2226,7 @@ pages = "830-835"
 @ARTICLE{Findchirp2012,
 author = "Allen, B. and Anderson, W.G. and Brady, P.R. and Brown, D.A. and Creighton, J.D.E.",
 title = "{FINDCHIRP}: {A}n algorithm for detection of gravitational waves from inspiraling compact binaries",
-journal = "{P}hys {R}ev {D}",
+journal = "{P}hys. {R}ev. {D}",
 year = "2012",
 volume = "85",
 number = "12"
@@ -2233,7 +2235,7 @@ number = "12"
 @ARTICLE{PetersMatthews1963,
 author = "Peters, P.C. and Matthews, J.",
 title = "Gravitational Radiation from Point Masses in a {K}eplerian Orbit",
-journal = "{P}hys {R}ev",
+journal = "{P}hys. {R}ev.",
 year = "1963",
 volume = "131",
 number = "435-440"
@@ -2242,16 +2244,16 @@ number = "435-440"
 @ARTICLE{Driggers2012NN,
 author = "Driggers, Jennifer C. and Harms, Jan and Adhikari, Rana X.",
 title = "Subtraction of Newtonian noise using optimized sensor arrays",
-journal = "{P}hys {R}ev {D}",
+journal = "{P}hys. {R}ev. {D}",
 volume = "86",
 number = "102001",
 year = "2012"
 }
 
 @ARTICLE{DeRosa2012FF,
-author = "De{R}osa, Ryan, and Driggers, Jennifer C. and Atkinson, Dani and Miao, Haixing, and Frolov, Valera and Landry, Michael and Giaime, Joseph A. and Adhikari, Rana X.",
+author = "De{R}osa, Ryan and Driggers, Jennifer C. and Atkinson, Dani and Miao, Haixing and Frolov, Valera and Landry, Michael and Giaime, Joseph A. and Adhikari, Rana X.",
 title = "Global feed-forward vibration isolation in a km scale interferometer",
-journal = "{C}lass {Q}uantum {G}rav",
+journal = "{C}lassical and {Q}uantum {G}ravity",
 volume = "29",
 number = "215008",
 year = "2012"
