Integrating changes to bibliography as done for the revised version sent to CQG. Grant David Meadors, 02014-05-12 (JD 2456790)

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -2258,3 +2258,58 @@ volume = "29",
 number = "215008",
 year = "2012"
 }
+
+@ARTICLE{Buskulic2000,
+author = "Buskulic, D. and Derome, L. and Flaminio, R. and Hermel, R. and Lacotte, J.C. and Marion, F. and Masserot, A. and Massonnet, L. and Mours, B. and Morand, R. and Puppo, P. and Verkindt, D. and Yvert, M.",
+title = "Monitoring and adaptive removal of the power supply harmonics applied to the {V}irgo readout-out noise",
+journal = "IJMPD",
+volume = "9",
+number = "1",
+year = "2000",
+pages = "263-267"
+}
+
+@ARTICLE{Weisberg2010,
+author = "Weisberg, J.M. and Nice, D.J. and Taylor, J.H.",
+title = "Timing measurements of the relativistic binary pulsar {PSR B1913+16}",
+journal = "ApJ",
+volume = "722",
+pages = "1030-1034",
+year = "2010"
+}
+
+@ARTICLE{AbadieCalibration2010,
+author = "Abadie, J. and others",
+title = "Calibration of the {LIGO} gravitational wave detectors in the fifth science run",
+journal = "NIM-A",
+volume = "623",
+pages = "223-240",
+year = "2010"
+}
+
+@UNPUBLISHED{VirgoAlphaBetaGamma2008,
+author = "Swinkels, Bas and Campagna, Enrico and Vajente, Gabriele and Barsotti, Lisa and Evans, Matt",
+title = "Logitidinal noise subtraction: the alpha-, beta- and gamma- technique",
+note = "{VIRGO} technical report VIR-050A-08: available https://tds.ego-gw.it/ql/?c=2055",
+year = "2008",
+month = "June"
+}
+
+@ARTICLE{Bortel2007,
+author = "Bortel, R. and Sovka, P.",
+title = "Approximation of statistical distribution of magnitude squared coherence estimated with segment overlapping",
+journal = "{S}ig. {P}roc.",
+volume = "87",
+number = "5",
+pages = "1100-1117",
+year = "2007"
+}
+
+@ARTICLE{Drever1983,
+author = "Drever, R.W.P. and others",
+title = "Laser phase and frequency stabilization using an optical resonator",
+journal = "Appl. {P}hys. {B}",
+pages = "97-105",
+volume = "31",
+year = "1983"
+}
