Integrating changes from ScoX1 talk

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -2305,11 +2305,38 @@ pages = "1100-1117",
 year = "2007"
 }
 
-@ARTICLE{Drever1983,
-author = "Drever, R.W.P. and others",
-title = "Laser phase and frequency stabilization using an optical resonator",
-journal = "Appl. {P}hys. {B}",
-pages = "97-105",
-volume = "31",
-year = "1983"
+@ARTICLE{GoetzTwoSpectMethods2011,
+author = "Goetz, E. and Riles, K.",
+title = "An all-sky search algorithm for continuous gravitational waves from spinning neutron stars in binary systems",
+journal = "{C}lass. {Q}uant. {G}rav.",
+year = "2011",
+volume = "28",
+number = "215006"
+}
+
+@ARTICLE{PapaloizouPringle1978,
+author = "Papaloizou, J. and Pringle, J.E.",
+journal = "M.{N}.{R}.{A}.{S}.",
+title = "Gravitational radiation and the stability of rotating stars",
+volume = "184",
+number = "501",
+year = "1978"
+}
+
+@ARTICLE{Wagoner1984,
+author = "Wagoner, R.V.",
+journal = "{A}p. {J}.",
+title = "Gravitational radiation from accreting neutron stars",
+volume = "278",
+number = "345",
+year = "1984"
+}
+
+@ARTICLE{Chakrabarty2003,
+author = "Chakrabarty, D. and others",
+title = "Nuclear-powered millisecond pulsars and the maximum spin frequency of neutron stars",
+journal = "Nature",
+volume = "424",
+pages = "42",
+year = "2003"
 }
