Incorporating changes from Hannover and APS April talks, hopefully without losing anything

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -2340,3 +2340,12 @@ volume = "424",
 pages = "42",
 year = "2003"
 }
+
+@ARTICLE{Drever1983,
+author = "Drever, R.W.P. and others",
+title = "Laser phase and frequency stabilization using an optical resonator",
+journal = "Appl. {P}hys. {B}",
+pages = "97-105",
+volume = "31",
+year = "1983"
+}
