Added citation for the thesis by Ethan Obie Romero-Severson

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -2120,6 +2120,14 @@ month = sep,
 year = "2006"
 }
 
+@PHDTHESIS{RomeroThesis,
+author = "Romero{-S}everson, Ethan Obie",
+title = "Sexual Volatility and the Spread of HIV",
+school = "University of Michigan",
+month = apr,
+year = "2011"
+}
+
 @ARTICLE{Driggers2012ActiveNoise,
 author = "Driggers, Jennifer C. and Evans, Matthew and Pepper, Keenan and Adhikari, Rana",
 title = "Active noise cancellation in a suspended interferometer",
