--- a/bibliography.bib
+++ b/bibliography.bib
@@ -773,19 +773,35 @@ year = "2009"
 }
 
 @ARTICLE{LSCPulsar2006,
-author = "Abbott et al, B.l",
+author = "Abbott, B. and others",
 journal = "Phys. {R}ev. {D}",
 volume = "76",
-number = "082001",
+number = "042001",
 year = "2007"
 }
 
+@ARTICLE{LSCPulsarS4,
+author = "Abbott, B.",
+journal = "Phys. {R}ev. {D}",
+volume = "77",
+number = "022001",
+year = "2008"
+}
+
 @ARTICLE{LSCPowerFlux2009,
-author = "Abbott et al, B.",
+author = "Abbott, B. and others",
 journal = "Phys. {R}ev. {L}ett",
 volume = "102",
 number = "111102",
 year = "2009"
+}
+
+@ARTICLE{LSCEinsteinHome2009,
+author = "Abbott, B. and others",
+journal = "Phys. {R}ev. {D}",
+volume = "79",
+number = "022001",
+year = "2009" 
 }
 
 @ARTICLE{Gustavsen1999,
@@ -911,10 +927,13 @@ number = "613",
 year = "2013"
 }
 
-@UNPUBLISHED{ChuaBackscatteredLight,
+@ARTICLE{ChuaBackscatteredLight,
 author = "Chua, S.S.Y. and Dwyer, S. and Barsotti, L. and Sigg, D. and Schofield, R.M.S. and Frolov, V.V. and Kawabe, K. and Evans, M. and Meadors, G.D. and Factourovich, M. and Gustafson, R. and Smith-Lefebvre, N. and Vorvick, C. and Landry, M. and Khalaidovski, A. and Stefszky, M.S. and Mow-Lowry, C.M. and Buckler, B.C. and Shaddock, D.A. and Lam, P.K and Schnabel, R. and Mavalvala, N. and McClelland, D.E.",
 title = "Impact of backscattered-light in a squeezing-enhanced interferometric gravitational-wave detector",
-note = "In preparation."
+journal = "Classical and {Q}uantum {G}ravity"
+year = "2014",
+volume = "31",
+number = "035017"
 }
 
 @ARTICLE{DwyerPhaseNoise,
@@ -1744,6 +1763,54 @@ publisher = "MIT",
 address = "Cambridge, Massachusetts"
 }
 
+@BOOK{CollinsGravityShadow,
+author = "Collins, H.",
+title = "Gravity's Shadow: the Search for Gravitational Waves",
+year = "2004",
+publisher = "Chicago",
+address = "Chicago, Illinois"
+}
+
+@BOOK{CollinsGravityGhost,
+author = "Collins, H.",
+title = "Gravity's Ghost and {B}ig {D}og: Scientific Discovery in the Twenty-first Century",
+year = "2013",
+publisher = "Chicago",
+address = "Chicago, Illinois"
+}
+
+@BOOK{JacksonEM,
+author = "Jackson, J.D.",
+title = "Classical electrodynamics, 3rd edition",
+year = "1999",
+publisher = "John {W}iley \& {S}ons",
+address = "New York, New York"
+}
+
+@BOOK{Will1993,
+author = "Will, C.M.",
+title = "Theory and experiment in gravitational physics",
+year = "1993",
+publisher = "Cambridge",
+address = "Cambridge"
+}
+
+@BOOK{Hawking2002,
+author = "Hawking, S.",
+title = "On the Shoulders of Giants",
+year = "2002",
+publisher = "Running Press",
+address = "Philadelphia, Pennsylvania"
+}
+
+@BOOK{SnowTwoCultures,
+author = "Snow, C.P.",
+title = "The two cultures; with an introduction by {S}tefan {C}ollini",
+year = "1993",
+publisher = "Cambridge",
+address = "Cambridge"
+}
+
 @TECHREPORT{MonitorRC,
 	author = "Gustafson, D.",
 	title = "Analyzing system and reference beam for individually monitoring recycling cavity and carrier dynamics",
@@ -2107,9 +2174,10 @@ year = "2013"
 
 @PHDTHESIS{ChuaThesis,
 author = "Sheon S. Y. Chua",
-title = "In preparation",
+title = "Quantum enhancement of a 4km laser interferometer gravitational-wave detector",
 school = "Australian National University",
-year = "In preparation"
+month = apr,
+year = "2013"
 }
 
 @MASTERSTHESIS{FotopoulosThesis,
@@ -2356,4 +2424,97 @@ journal = "Appl. {P}hys. {B}",
 pages = "97-105",
 volume = "31",
 year = "1983"
+}
+
+@ARTICLE{Weber1960,
+author = "Weber, J.",
+title = "Detection and generation of gravitational waves",
+journal = "{P}hys. {R}ev.",
+volume = "117",
+number = "1",
+pages = "306"
+year = "1960"
+}
+
+@ARTICLE{Forward1978,
+author = "Forward, R.L.",
+title = "Wideband laser-interferometer gravitational-radiation experiment",
+journal = "{P}hys. {R}ev. {D}",
+volume = "17",
+number = "2",
+pages = "379",
+year = "1978"
+}
+
+@ARTICLE{EinsteinRosen1937,
+author = "Einstein, A. and Rosen, N.",
+title = "On gravitational waves",
+journal = "{J}. {F}ranklin {I}nst.",
+volume = "223",
+pages = "43",
+year = "1937" 
+}
+
+@TECHREPORT{BICEP2014,
+author = "Ade, P.A.R. and others",
+title = "{BICEP2} {I}: detection of {B}-mode polarization at Degree Angular Scales",
+institution = "arXiv",
+number = "astro-ph/1403.3985"
+year = "2014-03-18"
+}
+
+@TECHREPORT{Planck2014,
+author = "Ade, P.A.R. and others",
+title = "Planck 2013 results. {XVI}. Cosmological parameters",
+institution = "arXiv",
+number = "astro-ph/1303.5076"
+year = "2014-03-21"
+}
+
+@ARTICLE{FlanaganHughes2005,
+author = "Flanagan, \'{E}.\'{E} and Hughes, S.A.",
+title = "The basics of gravitational wave theory",
+journal = "New {J} {P}hys.",
+year = "2005",
+volume = "7",
+number = "204"
+}
+
+@ARTICLE{Caves1980,
+author = "Caves, C.M.",
+title = "Quantum-mechanical radiation-pressure fluctuations in an interferometer",
+journal = "{P}hys. {R}ev. {L}ett.",
+year = "1980",
+volume = "45",
+number = "2",
+pages = "75"
+}
+
+@ARTICLE{Caves1981,
+author = "Caves, C.M.",
+title = "Quantum-mechanical noise in an interferometer",
+journal = "{P}hys. {R}ev. {D}",
+year = "1981",
+volume = "23",
+number = "8",
+pages = "1693"
+}
+
+@ARTICLE{Jaranowski1998,
+author = "Jaranowski, P. and Kr\'{o}lak, A. and Schutz, B.",
+title = "Data analysis of gravitational-wave signals from spinning neutron stars: the signal and its detection",
+journal = "Phys. {R}ev. {D}",
+year = "1998",
+number = "063001",
+volume = "58"
+}
+
+@ARTICLE{Brady1998,
+author = "Brady, P.R. and Creighton, T. and Cutler, C. and Schutz, B.F.",
+title = "Searching for periodic sources with {LIGO}",
+journal = "Phys. {R}ev. {D}",
+year = "1998",
+number = "4",
+volume = "57",
+pages = "2101"
 }
