--- a/bibliography.bib
+++ b/bibliography.bib
@@ -2518,3 +2518,71 @@ number = "4",
 volume = "57",
 pages = "2101"
 }
+
+@ARTICLE{Zimmermann1979,
+author = "Zimmermann, M. and Szedenits, Jr, E.",
+title = "Gravitational waves from rotating and precessing rigid bodies: simple models and applications to pulsars",
+journal = "Phys. {R}ev. {D}",
+year = "1979",
+pages = "351",
+volume = "20"
+}
+
+@ARTICLE{Owen2005,
+author = "Owen, B.J.",
+title = "Maximum elastic deformations of compact stars with exotic equations of state",
+journal = "Phys. {R}ev. {L}ett.",
+volume = "95",
+year = "2005",
+pages = "211101"
+}
+
+@ARTICLE{Lattimer2007,
+author = "Lattimer, J.M. and Prakash, M.",
+title = "Neutron star observations: prognosis for equation of state constraints",
+journal = "Physics reports",
+volume = "442",
+pages = "109"
+}
+
+@ARTICLE{Read2009,
+author = "Read, J.S. and others",
+title = "Measuring the neutron star equation of state with gravitational wave observations",
+journal = "Phys. {R}ev. {D}",
+volume = "79",
+pages = "124033"
+}
+
+@ARTICLE{AbbottScoX12007,
+author = "Abbott, B. and others",
+title = "Searches for periodic gravitational waves from unknown isolated sources and Scorpius X-1: results from the second LIGO science run",
+journal = "Phys. {R}ev. {D}",
+volume = "76",
+pages = "082001"
+}
+
+@ARTICLE{Owen1998,
+author = "Owen, B.J. and others",
+title = "Gravitational waves from hot young rapidly rotating neutron stars",
+journal = "Phys. {R}ev. {D}",
+volume = "58",
+pages = "084020"
+}
+
+@ARTICLE{Schutz1989,
+author = "Schutz,B.F.",
+journal = "Class. {Q}uant. {G}rav.",
+title = "Gravitational wave sources and their detectability",
+year = "1989",
+volume = "6",
+pages = "1761"
+}
+
+@ARTICLE{Punturo2010,
+author = "Punturo, M. and others",
+title = "The {E}instein {T}elescope: a third-generation gravitational wave observatory",
+journal = "Class. {Q}uant. {G}rav.",
+volume = "27",
+pages = "194002"
+year = "2010"
+}
