Added new references for thesis, GDM 02014-06-13 (JD 2456822)

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1114,9 +1114,9 @@ year = "2000"}
 @BOOK{taylor,
 	author = "Taylor, J.R.",
 	title = "Introduction to error analysis: the study of uncertainties in physical measurements",
-	publisher = "(University Science Books",
+	publisher = "University Science Books",
 	edition = "Second",
-	year = "1997)"
+	year = "1997"
 	
 }
 
@@ -1809,6 +1809,24 @@ title = "The two cultures; with an introduction by {S}tefan {C}ollini",
 year = "1993",
 publisher = "Cambridge",
 address = "Cambridge"
+}
+
+@BOOK{HorowitzHill1989,
+author = "Horowitz, P. and Hill, W.",
+title = "The art of electronics",
+edition = "2nd",
+publisher = "Cambridge",
+address = "Cambridge",
+year = "1989"
+}
+
+@BOOK{CasellaBerger2001,
+author = "Casella, G. and Berger, R.L.",
+title = "Statistical inference",
+year = "2001",
+edition = "2nd",
+publisher = "Cengage",
+address = "Stamford"
 }
 
 @TECHREPORT{MonitorRC,
