--- a/bibliography.bib
+++ b/bibliography.bib
@@ -2608,7 +2608,7 @@ year = "2010"
 @ARTICLE{FeldmanCousins1998,
 author = "Feldman, G.J. and Cousins, R.D.",
 title = "Unified approach to the classical statistical analysis of small signals",
-journal = "Phys. {R}ev. {D}."
+journal = "Phys. {R}ev. {D}.",
 volume = "57",
 pages = "3873"
 }
