Added a variety of old sources from my Reed thesis, as well as the new curvature derivation of gravitational waves by Finn. Grant David Meadors, 02014-06-24 (JD 2456833)

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1829,6 +1829,24 @@ publisher = "Cengage",
 address = "Stamford"
 }
 
+@BOOK{Shklovsky1960,
+author = "Shklovsky, I.",
+title = "Cosmic radio waves",
+address = "Cambridge, MA",
+publisher = "Harvard",
+year = "1960",
+note = "Translated by Richard B. Rodman and Carlos M. Varsavsky"
+}
+
+@BOOK{Gurzadyan1956,
+author = "Gurzadyan, G.",
+title = "Radioastrofizika",
+address = "Erevan, Armenian SSR",
+publisher = "Akademia nauk armenyanskoi SSR",
+year = "1956",
+note = "Russian language"
+}
+
 @TECHREPORT{MonitorRC,
 	author = "Gustafson, D.",
 	title = "Analyzing system and reference beam for individually monitoring recycling cavity and carrier dynamics",
@@ -2489,6 +2507,14 @@ number = "astro-ph/1303.5076"
 year = "2014-03-21"
 }
 
+@TECHREPORT{KoopFinn2014,
+author = "Koop, M.J. and Finn, L.S.",
+title = "Gravitational wave detector response in terms of spacetime Riemann curvature",
+institution = "arXiv",
+number = "gr-qc/1310.2871",
+year = "2013-10-10"
+}
+
 @ARTICLE{FlanaganHughes2005,
 author = "Flanagan, \'{E}.\'{E} and Hughes, S.A.",
 title = "The basics of gravitational wave theory",
@@ -2611,4 +2637,13 @@ title = "Unified approach to the classical statistical analysis of small signals
 journal = "Phys. {R}ev. {D}.",
 volume = "57",
 pages = "3873"
+}
+
+@ARTICLE{KerrLyndenBell1986,
+author = "Kerr, F.J. and Lynden-Bell, D.",
+title = "Review of galactic constants",
+journal = "Mon. {N}ot. {R}. {A}str. {S}oc.",
+volume = "221",
+pages  = "1023-1038",
+year = "1986"
 }
