Have more added references for very advanced detectors

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1018,6 +1018,24 @@ volume = "88",
 number = "122004"
 }
 
+@ARTICLE{Hobbs2010,
+author = "Hobbs, G. and others",
+title = "The {I}nternational {P}ulsar {T}iming {A}rray project: using pulsars as a gravitational wave detector",
+journal = "Class. {Q}uant. {G}rav.",
+year = "2010",
+volume = "27",
+number = "084013"
+}
+
+@ARTICLE{Harry2006,
+author = "Harry, G.M. and Fritschel, P. and Shaddock, D.A. and Folkner, W. and Phinney, E.S.",
+title = "Laser interferometry for the {B}ig {B}ang {O}bserver",
+journal = "Class. {Q}uant. {G}rav.",
+year = "2006",
+volume = "23",
+pages = "4887-4894"
+}
+
 @INBOOK{Prix2006,
 author = "Prix, R.",
 title = "Neutron stars and pulsars",
@@ -2199,6 +2217,39 @@ number = "T970084",
 year = "1997"
 }
 
+@TECHREPORT{aLIGOrefDesign,
+author = "{Advanced LIGO Team}"
+title = "Advanced {LIGO} reference design",
+institution = "LIGO",
+number = "M060056-v2",
+year = "2011"
+}
+
+@TECHREPORT{aLIGOsysDesign,
+author = "Fritschel, P.",
+title = "Advanced {LIGO} systems design",
+institution = "LIGO",
+number = "T010075-v2",
+year = "2009"
+}
+
+@TECHREPORT{IyerIndia2011,
+author = "Iyer, B.",
+title = "{LIGO-I}ndia: proposal for an interferometric gravitational-wave observatory",
+institution = "LIGO",
+number = "M1100296",
+year = "2011"
+}
+
+@TECHREPORT{Acernese2009,
+author = "Acernese, F. and others",
+title = "Advanced {V}irgo baseline design",
+institution = "Virgo",
+number = "VIR-0027A-09",
+year = "2009"
+}
+
+
 @PHDTHESIS{BallmerThesis,
 author = "Ballmer, S. W.",
 title = "LIGO interferometer operating at design sensitivity with application to gravitational radiometry",
@@ -2713,6 +2764,43 @@ pages = "194002"
 year = "2010"
 }
 
+@ARTICLE{NarayanOstriker1990,
+author = "Narayan, R. and Ostriker, J.P.",
+title = "Pulsar populations and their evolution",
+journal = "Astrophys. {J}.",
+volume = "352",
+year = "1990",
+pages = "222-246"
+}
+
+@ARTICLE{Shawhan2010,
+author = "Shawhan, P.",
+title = "Gravitational-wave astronomy: observational results and their impact",
+journal = "Class. {Q}uant. {G}rav.",
+volume = "27",
+year = "2010",
+number = "084017"
+}
+
+@ARTICLE{Ando2010,
+author = "Ando, M.",
+title = "{DECIGO} and {DECIGO} pathfinder",
+journal = "Class. {Q}uant. {G}rav.",
+volume = "27",
+year = "2010",
+number = "084010"
+}
+
+@ARTICLE{Shawhan2010,
+author = "Shawhan, P.",
+title = "Gravitational-wave astronomy: observational results and their impact",
+journal = "Class. {Q}uant. {G}rav.",
+volume = "27",
+year = "2010",
+number = "084017"
+}
+
+
 @ARTICLE{FeldmanCousins1998,
 author = "Feldman, G.J. and Cousins, R.D.",
 title = "Unified approach to the classical statistical analysis of small signals",
@@ -2755,4 +2843,13 @@ journal = "Astronom. {J}.",
 year = "2005",
 volume = "129",
 number = "4"
+}
+
+@ARTICLE{Vitale2014,
+author = "Vitale, S.",
+title = "Space-borne gravitational wave observatories",
+journal = "Gen. {R}elativ. {G}ravit.",
+year = "2014",
+volume = "46",
+number = "1730"
 }
