Updated thesis with Markwardt reference to J1751-305. Grant David Meadors, 02014-09-06 (JD 2456907)

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -2853,3 +2853,12 @@ year = "2014",
 volume = "46",
 number = "1730"
 }
+
+@ARTICLE{Markwardt2002,
+author = "Markwardt, C.B. and others",
+title = "Discovery of a second millisecond accreting pulsar: {XTE J1751-305}",
+journal = "Astrophys. {J}",
+year = "2002",
+volume = "575",
+pages = "L21-L24"
+}
