Added new references for thesis. Grant David Meadors, 02014-09-09 (JD 2456910)

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -2640,6 +2640,14 @@ number = "astro-ph/1303.5076"
 year = "2014-03-21"
 }
 
+@TECHREPORT{Baumann2009,
+author = "Baumann, D.",
+title = "TASI Lectures on Inflation",
+institution = "arXiv",
+number = "hep-th/0907.5424",
+year = "2012-11-30" 
+}
+
 @TECHREPORT{KoopFinn2014,
 author = "Koop, M.J. and Finn, L.S.",
 title = "Gravitational wave detector response in terms of spacetime Riemann curvature",
@@ -2719,7 +2727,8 @@ author = "Lattimer, J.M. and Prakash, M.",
 title = "Neutron star observations: prognosis for equation of state constraints",
 journal = "Physics reports",
 volume = "442",
-pages = "109"
+pages = "109",
+year = "2007"
 }
 
 @ARTICLE{Read2009,
@@ -2727,7 +2736,8 @@ author = "Read, J.S. and others",
 title = "Measuring the neutron star equation of state with gravitational wave observations",
 journal = "Phys. {R}ev. {D}",
 volume = "79",
-pages = "124033"
+pages = "124033",
+year = "2009"
 }
 
 @ARTICLE{AbbottScoX12007,
@@ -2735,7 +2745,8 @@ author = "Abbott, B. and others",
 title = "Searches for periodic gravitational waves from unknown isolated sources and {Scorpius X-1}: results from the second LIGO science run",
 journal = "Phys. {R}ev. {D}",
 volume = "76",
-pages = "082001"
+pages = "082001",
+year = "2007"
 }
 
 @ARTICLE{Owen1998,
@@ -2743,7 +2754,17 @@ author = "Owen, B.J. and others",
 title = "Gravitational waves from hot young rapidly rotating neutron stars",
 journal = "Phys. {R}ev. {D}",
 volume = "58",
-pages = "084020"
+pages = "084020",
+year = "1998"
+}
+
+@ARTICLE{Owen2010,
+author = "Owen, B.J.",
+title = "How to adapt broad-band gravitational-wave searches for $r$-modes",
+journal = "Phys. {R}ev. {D}",
+volume = "82",
+year = "2010",
+pages = "104002",
 }
 
 @ARTICLE{Schutz1989,
@@ -2861,4 +2882,13 @@ journal = "Astrophys. {J}",
 year = "2002",
 volume = "575",
 pages = "L21-L24"
+}
+
+@ARTICLE{Saulson1997,
+author = "Saulson, P.R.",
+title = "If light waves are stretched by gravitational waves, how can we use light as a ruler to detect gravitational waves?",
+journal = "Amer. {J P}",
+year = "1997",
+volume = "65",
+number = "501"
 }
