Added references to Takahashi and Walls. Grant David Meadors, 02014-09-11 (JD 2456912)

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -2892,3 +2892,21 @@ year = "1997",
 volume = "65",
 number = "501"
 }
+
+@ARTICLE{Takahashi1965,
+author = "Takahashi, H.",
+journal = "Adv. {C}ommun. {S}yst.",
+volume = "1",
+year = "1965",
+number = "227"
+}
+
+@ARTICLE{Walls1983,
+author = "Walls, D.F.",
+title = "Squeezed states of light",
+journal = "Nature",
+volume = "306",
+year = "1983",
+pages="141-146",
+doi={10.1038/306141a0}
+}
