Sorted broken entries in bibliography. Grant David Meadors, 02014-09-15 (JD 2456916)

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -930,7 +930,7 @@ year = "2013"
 @ARTICLE{ChuaBackscatteredLight,
 author = "Chua, S.S.Y. and Dwyer, S. and Barsotti, L. and Sigg, D. and Schofield, R.M.S. and Frolov, V.V. and Kawabe, K. and Evans, M. and Meadors, G.D. and Factourovich, M. and Gustafson, R. and Smith-Lefebvre, N. and Vorvick, C. and Landry, M. and Khalaidovski, A. and Stefszky, M.S. and Mow-Lowry, C.M. and Buckler, B.C. and Shaddock, D.A. and Lam, P.K and Schnabel, R. and Mavalvala, N. and McClelland, D.E.",
 title = "Impact of backscattered-light in a squeezing-enhanced interferometric gravitational-wave detector",
-journal = "Classical and {Q}uantum {G}ravity"
+journal = "Classical and {Q}uantum {G}ravity",
 year = "2014",
 volume = "31",
 number = "035017"
@@ -2218,7 +2218,7 @@ year = "1997"
 }
 
 @TECHREPORT{aLIGOrefDesign,
-author = "{Advanced LIGO Team}"
+author = "{Advanced LIGO Team}",
 title = "Advanced {LIGO} reference design",
 institution = "LIGO",
 number = "M060056-v2",
@@ -2601,7 +2601,7 @@ title = "Detection and generation of gravitational waves",
 journal = "{P}hys. {R}ev.",
 volume = "117",
 number = "1",
-pages = "306"
+pages = "306",
 year = "1960"
 }
 
@@ -2628,16 +2628,20 @@ year = "1937"
 author = "Ade, P.A.R. and others",
 title = "{BICEP2} {I}: detection of {B}-mode polarization at Degree Angular Scales",
 institution = "arXiv",
-number = "astro-ph/1403.3985"
-year = "2014-03-18"
+number = "astro-ph/1403.3985",
+year = "2014",
+month = mar,
+day = "18"
 }
 
 @TECHREPORT{Planck2014,
 author = "Ade, P.A.R. and others",
 title = "Planck 2013 results. {XVI}. Cosmological parameters",
 institution = "arXiv",
-number = "astro-ph/1303.5076"
-year = "2014-03-21"
+number = "astro-ph/1303.5076",
+year = "2014",
+month = mar,
+day = "21"
 }
 
 @TECHREPORT{Baumann2009,
@@ -2781,7 +2785,7 @@ author = "Punturo, M. and others",
 title = "The {E}instein {T}elescope: a third-generation gravitational wave observatory",
 journal = "Class. {Q}uant. {G}rav.",
 volume = "27",
-pages = "194002"
+pages = "194002",
 year = "2010"
 }
 
@@ -2812,22 +2816,14 @@ year = "2010",
 number = "084010"
 }
 
-@ARTICLE{Shawhan2010,
-author = "Shawhan, P.",
-title = "Gravitational-wave astronomy: observational results and their impact",
-journal = "Class. {Q}uant. {G}rav.",
-volume = "27",
-year = "2010",
-number = "084017"
-}
-
 
 @ARTICLE{FeldmanCousins1998,
 author = "Feldman, G.J. and Cousins, R.D.",
 title = "Unified approach to the classical statistical analysis of small signals",
 journal = "Phys. {R}ev. {D}",
 volume = "57",
-pages = "3873"
+pages = "3873",
+year = "1998"
 }
 
 @ARTICLE{KerrLyndenBell1986,
