Added Galloway reference

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -2906,3 +2906,23 @@ year = "1983",
 pages="141-146",
 doi={10.1038/306141a0}
 }
+
+@ARTICLE{Galloway2014,
+   author = {{Galloway}, D.~K. and {Premachandra}, S. and {Steeghs}, D. and
+        {Marsh}, T. and {Casares}, J. and {Cornelisse}, R.},
+    title = "{Precision Ephemerides for Gravitational-wave Searches. I. Sco X-1}",
+  journal = {Ap J},
+archivePrefix = "arXiv",
+   eprint = {1311.6246},
+ primaryClass = "astro-ph.HE",
+ keywords = {ephemerides, gravitational waves, stars: neutron, techniques: radial velocities, X-rays: binaries, X-rays: individual: Sco X-1 },
+     year = 2014,
+    month = jan,
+   volume = 781,
+      eid = {14},
+    pages = {14},
+      doi = {10.1088/0004-637X/781/1/14},
+   adsurl = {http://adsabs.harvard.edu/abs/2014ApJ...781...14G},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
