Fixed typo in said TwoSpect entry.

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -2560,7 +2560,7 @@ number = "215006"
 }
 
 @ARTICLE{GoetzTwoSpectResults2014,
-author = "Aasi. J and others",
+author = "Aasi, J. and others",
 title = "First all-sky search for continuous gravitational waves from unknown sources in binary systems",
 journal = "PRD",
 volume = "90",
