Added Bildsten reference

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -2944,3 +2944,12 @@ archivePrefix = "arXiv",
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{Bildsten1998,
+author = "Bildsten, L.",
+title = "Gravitational radiation and rotation of accreting neutron stars",
+journal = "Astrophys. {J}. {L}ett.",
+year = "1998",
+volume = "501",
+number = "L89",
+doi = {10.1086/311440}
+}
