Added reference to Strohmayer XTE J1751-305 paper

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -2953,3 +2953,12 @@ volume = "501",
 number = "L89",
 doi = {10.1086/311440}
 }
+
+@ARTICLE{Strohmayer2014,
+author = "Strohmayer, T. and Mahmoodifar, S.",
+title = "A non-radial oscillation mode in an accreting millisecond pulsar?",
+journal = "Astrophys. {J}",
+year = "2014",
+volume = "784",
+number = "72",
+doi = {10.1088/0004-637X/784/1/72}
