--- a/bibliography.bib
+++ b/bibliography.bib
@@ -2669,6 +2669,14 @@ number = "gr-qc/1310.2871",
 year = "2013-10-10"
 }
 
+@TECHREPORT{ScoX1MDC2014DCC,
+author = "Bulten, H.J and Crowder, S.G. and Dergachev, V. and Galloway, D. and Goetz, E. and Jonker, R.J.G. and Lasky, P.D. and Meadors, G.D. and Messenger, C. and Premachandra, S. and Riles, K. and Sammut, L. and Thrane, E.H.  and Whelan, J.T. and Zhang, Y.",
+title = "Gravitational waves from Sco X-1: a comparison of search methods",
+institution = "LIGO",
+number = "P12XXXXX-x0",
+year = "2014"
+}
+
 @ARTICLE{FlanaganHughes2005,
 author = "Flanagan, \'{E}.\'{E} and Hughes, S.A.",
 title = "The basics of gravitational wave theory",
@@ -2963,3 +2971,78 @@ volume = "784",
 number = "72",
 doi = {10.1088/0004-637X/784/1/72}
 }
+
+@ARTICLE{Andersson2014,
+author = "Andersson, N. and Jones, D.I. and Ho, W.C.G.",
+title = "Implications of an r mode in {XTE J1751-305}: mass, radius and spin evolution",
+journal = "Mon. {N}ot. {R}. {A}str. {S}oc.",
+year = "2014",
+volume = "442",
+pages = "1786-1793"
+doi = {10.1093/mnras/stu870}
+}
+
+@ARTICLE{Lee2014,
+author = "Lee, U.",
+title = "Excitation of a non-radial mode in a millisecond {X}-ray pulsar {XTE J1751-305}",
+journal = "Mon. {N}ot. {R}. {A}str. {S}oc.",
+year = "2014",
+volume = "442",
+pages = "3037-3043"
+doi = {10.1093/mnras/stu1077}
+}
+
+@TECHREPORT{DergachevRiles2005,
+author = "Dergachev, V. and Riles, K.",
+title = "Description of {PowerFlux} algorithms and implementation",
+institution = "LIGO",
+year = "2005",
+number = "T050186-00-Z"
+}
+
+@ARTICLE{MendellWette2008,
+author = "Mendell, G. and Wette, K.",
+title = "Using generalized {PowerFlux} methods to estimate the parameters of periodic gravitational waves",
+journal = "Class. {Q}uant. {G}rav.",
+year = "2008",
+volume = "25",
+number = "144044",
+doi = {10.1088/0264-9381/25/11/114044}
+}
+
+@ARTICLE{2010JPhCS.228a2005V,
+   author = {{van~der~Putten}, S. and {Bulten}, H.~J. and {van~den~Brand}, J.~F.~J. and
+        {Holtrop}, M.},
+    title = "{Searching for gravitational waves from pulsars in binary systems: An all-sky search}",
+  journal = {Journal of Physics Conference Series},
+     year = 2010,
+    month = may,
+   volume = 228,
+   number = 1,
+      eid = {012005},
+    pages = {012005},
+      doi = {10.1088/1742-6596/228/1/012005},
+   adsurl = {http://adsabs.harvard.edu/abs/2010JPhCS.228a2005V},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Messenger2007CQG,
+author = "Messenger, C. and Woan, G.",
+title = "A fast search strategy for gravitational waves from low-mass x-ray binaries",
+journal = "{C}lassical and {Q}uantum {G}ravity",
+year = "2007",
+volume = "24",
+number = "S469",
+doi = "10.1088/0264-9381/24/19/S10",
+}
+
+@ARTICLE{Ballmer2006CQG,
+author = {Ballmer, Stefan W},
+title = {A radiometer for stochastic gravitational waves},
+journal = {Classical and Quantum Gravity},
+year = {2006},
+volume = {23},
+number = {S179},
+doi = {10.1088/0264-9381/23/8/S23}
+}
+
