--- a/bibliography.bib
+++ b/bibliography.bib
@@ -2993,7 +2993,7 @@ doi = {10.1093/mnras/stu1077}
 }
 
 @TECHREPORT{DergachevRiles2005,
-author = "Dergachev, V. and Riles, K.",
+author = "Dergachev, V.",
 title = "Description of {PowerFlux} algorithms and implementation",
 institution = "LIGO",
 year = "2005",
