Added IceCube and Kasevitch references

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -3046,3 +3046,22 @@ number = {S179},
 doi = {10.1088/0264-9381/23/8/S23}
 }
 
+@ARTICLE{Dimopoulos2009,
+author = "Dimopoulos, S. and Graham, P.W. and Hogan, J.M. and Kasevich, M.A. and Rajendran, S.",
+title = "Gravitational wave detection with atom interferometry",
+journal = "Physics {L}etters {B}",
+year = "2009",
+volume = "678",
+number = "1",
+pages = "37-40",
+doi = "10.1016/j.physletb.2009.06.011"
+}
+
+@ARTICLE{Aartsen2014,
+author = "Aartsen, M.G. and others",
+title = "Observation of high-energy astrophysical neutrinos in three years of {IceCube} data",
+journal = "Phys. {R}ev. {L}ett.",
+volume = "113",
+number = "101101",
+year = "2014"
+}
