Updated bibliography with Giacconi reference.

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -3065,3 +3065,12 @@ volume = "113",
 number = "101101",
 year = "2014"
 }
+
+@ARTICLE{Giacconi1962,
+author = "Giacconi, R. and Gursky, H. and Paolini, F.R. and Rossi, B.B.",
+title = "Evidence for {X} rays from sources outside the solar system",
+journal = "Phys. {R}ev. {L}ett.",
+volume = "9",
+number = "11",
+year = "1962"
+}
